update text format

--- a/examples/span_prompting.ipynb
+++ b/examples/span_prompting.ipynb
@@ -74,7 +74,7 @@
     ")\n",
     "wav = wav.mean(0, keepdim=True)\n",
     "inputs = processor(\n",
-    "    audios=[wav], descriptions=[\"A horn honking\"], anchors=[[[\"+\", 6.3, 7.0]]]\n",
+    "    audios=[wav], descriptions=[\"horn honking\"], anchors=[[[\"+\", 6.3, 7.0]]]\n",
     ").to(device)\n",
     "with torch.inference_mode():\n",
     "    result = model.separate(inputs)"
